; ModuleID = '/home/carl/AnghaBench/lab/q3map2/libs/picomodel/extr_picointernal.c__pico_calc_plane.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/libs/picomodel/extr_picointernal.c__pico_calc_plane.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_pico_calc_plane(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %9, align 4
  %14 = call i32 @_pico_subtract_vec(i32 %11, i32 %12, i32 %13)
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %10, align 4
  %18 = call i32 @_pico_subtract_vec(i32 %15, i32 %16, i32 %17)
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* %9, align 4
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @_pico_cross_vec(i32 %19, i32 %20, i32* %21)
  %23 = load i32, i32* %6, align 4
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @_pico_dot_vec(i32 %23, i32* %24)
  %26 = load i32*, i32** %5, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 3
  store i32 %25, i32* %27, align 4
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 @_pico_normalize_vec(i32* %28)
  ret i32 %29
}

declare dso_local i32 @_pico_subtract_vec(i32, i32, i32) #1

declare dso_local i32 @_pico_cross_vec(i32, i32, i32*) #1

declare dso_local i32 @_pico_dot_vec(i32, i32*) #1

declare dso_local i32 @_pico_normalize_vec(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
